# emacs-jupyter-client

./: CMakeLists.txt  README.md
lisp/: CMakeLists.txt  emacs-jupyter-client.el  emacs-jupyter-repl.el  jupyter-repl.el  test.el  test.sh
src/: BBQueue.hpp  BBSocket.cc  BBSocket.hpp  CMakeLists.txt  Channels.cc  Channels.hpp  Crypto.cc  Crypto.hpp  EmacsInterface.cc  EmacsInterface.hpp  Handlers.cc  Handlers.hpp  JupyterClient.cc  JupyterClient.hpp  KernelManager.cc  KernelManager.hpp  Message.cc  Message.hpp
test/: CMakeLists.txt  MockServer.cc  test.el  test.sh
