########################################################################
# Copy elisp to where it belongs
########################################################################
# install(FILES "emacs-jupyter-client.el" DESTINATION src)
install(FILES "emacs-jupyter-client.el" "test.el" DESTINATION src)
